@@ -42,7 +42,7 @@ public abstract class AbstractActionModel implements StartupModel {
     }
 
     @Override
-    public void setName(@Nonnull String n) {
+    public void setName(String n) {
         log.debug("setName(\"{}\")", n);
         // can set className to null if no class found for n
         this.className = StartupActionModelUtil.getDefault().getClassName(n);
@@ -110,7 +110,7 @@ public abstract class AbstractActionModel implements StartupModel {
     public void performAction() throws JmriException {
         log.debug("Invoke Action from {}", className);
         try {
-            Action action = (Action) Class.forName(className).newInstance();
+            Action action = (Action) Class.forName(className).getDeclaredConstructor().newInstance();
             if (SystemConnectionAction.class.isAssignableFrom(action.getClass())) {
                 SystemConnectionMemo memo = ConnectionNameFromSystemName.getSystemConnectionMemoFromSystemPrefix(this.getSystemPrefix());
                 if (memo != null) {
@@ -133,6 +133,12 @@ public abstract class AbstractActionModel implements StartupModel {
             throw new JmriException(ex);
         } catch (InstantiationException ex) {
             log.error("Could not instantiate specified class: {}", className, ex);
+            throw new JmriException(ex);
+        } catch (java.lang.reflect.InvocationTargetException ex) {
+            log.error("Error while invoking startup action for class: {}", className, ex);
+            throw new JmriException(ex);
+        } catch (NoSuchMethodException ex) {
+            log.error("Could not locate specified method: {}", className, ex);
             throw new JmriException(ex);
         } catch (Exception ex) {
             log.error("Error while performing startup action for class: {}", className, ex);
