@@ -15,6 +15,7 @@ import java.awt.event.KeyAdapter;
 import java.awt.event.KeyEvent;
 import java.awt.event.MouseEvent;
 import java.awt.event.WindowAdapter;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -1181,10 +1182,10 @@ public class PanelEditor extends Editor implements ItemListener {
                 className = ConfigXmlManager.adapterName(copied);
                 copied.setLocation(x, y);
                 try {
-                    adapter = (XmlAdapter) Class.forName(className).newInstance();
+                    adapter = (XmlAdapter) Class.forName(className).getDeclaredConstructor().newInstance();
                     Element el = adapter.store(copied);
                     adapter.load(el, this);
-                } catch (ClassNotFoundException | InstantiationException | IllegalAccessException
+                } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException
                     | jmri.configurexml.JmriConfigureXmlException
                     | RuntimeException ex) {
                         log.debug(ex.getLocalizedMessage(), ex);
@@ -1315,7 +1316,7 @@ public class PanelEditor extends Editor implements ItemListener {
         if (SystemType.isWindows() || SystemType.isLinux()) {
             return SwingUtilities.isRightMouseButton(event);
         } else {
-            return isMetaDown(event);
+            return event.isMetaDown();
         }
     }
 
